<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.InstructionFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instruction_text"
        style="@style/standard_textview_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/lets_see_text"
        style="@style/standard_textview_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lets_see_shoes_text"
        app:layout_constraintBottom_toTopOf="@+id/shoe_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

    <Button
        android:id="@+id/shoe_list_button"
        style="@style/blue_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text"
        app:layout_constraintVertical_bias="0.53" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>